--- a/PayToBill_StaticMethod/PayToBill_StaticMethod.csproj
+++ b/PayToBill_StaticMethod/PayToBill_StaticMethod.csproj
@@ -46,6 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BillMethods.cs" />
+    <Compile Include="Bill_Abstract\Bills.cs" />
+    <Compile Include="Bilss_concrete\ElectricBill.cs" />
+    <Compile Include="Bilss_concrete\GasBill.cs" />
+    <Compile Include="Bilss_concrete\WaterBill.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +59,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,5 +84,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
